{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 595,
  "lineage": "fa4d41e2-0bdf-009d-f66b-ad4541d6903b",
  "resources": [
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0159658d0b1b959d5",
            "association_id": "eipassoc-072b8ffbe29501558",
            "domain": "vpc",
            "id": "eipalloc-0159658d0b1b959d5",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0a3e239057a822f03",
            "private_dns": "ip-10-0-101-124.eu-north-1.compute.internal",
            "private_ip": "10.0.101.124",
            "public_dns": "ec2-13-48-41-81.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.41.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:internet-gateway/igw-05ee19f83dd548610",
            "id": "igw-05ee19f83dd548610",
            "owner_id": "343568180534",
            "tags": {
              "CreatedWith": "terraform",
              "Name": "igw-eks-tagal"
            },
            "tags_all": {
              "CreatedWith": "terraform",
              "Name": "igw-eks-tagal"
            },
            "vpc_id": "vpc-03ca2eda2dea91572"
          },
          "dependencies": [
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0159658d0b1b959d5",
            "association_id": "eipassoc-072b8ffbe29501558",
            "connectivity_type": "public",
            "id": "nat-0bb84b2bbba0dd320",
            "network_interface_id": "eni-0a3e239057a822f03",
            "private_ip": "10.0.101.124",
            "public_ip": "13.48.41.81",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-052d8bb41df048810",
            "tags": {
              "CreatedWith": "terraform",
              "Name": "nat-eks-tagal"
            },
            "tags_all": {
              "CreatedWith": "terraform",
              "Name": "nat-eks-tagal"
            }
          },
          "dependencies": [
            "module.module-eks.aws_eip.nat",
            "module.module-eks.aws_internet_gateway.main-gw",
            "module.module-eks.aws_subnet.main-public-1",
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:route-table/rtb-0c875b87ee0002ffc",
            "id": "rtb-0c875b87ee0002ffc",
            "owner_id": "343568180534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bb84b2bbba0dd320",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-private-route-table"
            },
            "tags_all": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ca2eda2dea91572"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module-eks.aws_eip.nat",
            "module.module-eks.aws_internet_gateway.main-gw",
            "module.module-eks.aws_nat_gateway.nat-gw",
            "module.module-eks.aws_subnet.main-public-1",
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:route-table/rtb-0842dba0b875ad99c",
            "id": "rtb-0842dba0b875ad99c",
            "owner_id": "343568180534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ee19f83dd548610",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-public-route-table"
            },
            "tags_all": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ca2eda2dea91572"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module-eks.aws_internet_gateway.main-gw",
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ea76fac2956541a",
            "route_table_id": "rtb-0c875b87ee0002ffc",
            "subnet_id": "subnet-0593a304dc26fca7e"
          },
          "dependencies": [
            "module.module-eks.aws_eip.nat",
            "module.module-eks.aws_internet_gateway.main-gw",
            "module.module-eks.aws_nat_gateway.nat-gw",
            "module.module-eks.aws_route_table.main-private",
            "module.module-eks.aws_subnet.main-private-1",
            "module.module-eks.aws_subnet.main-public-1",
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0abd13a0b1fe8e2",
            "route_table_id": "rtb-0c875b87ee0002ffc",
            "subnet_id": "subnet-007e5128850201f95"
          },
          "dependencies": [
            "module.module-eks.aws_eip.nat",
            "module.module-eks.aws_internet_gateway.main-gw",
            "module.module-eks.aws_nat_gateway.nat-gw",
            "module.module-eks.aws_route_table.main-private",
            "module.module-eks.aws_subnet.main-private-2",
            "module.module-eks.aws_subnet.main-public-1",
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03afbadf1fd8100ad",
            "route_table_id": "rtb-0c875b87ee0002ffc",
            "subnet_id": "subnet-05291e2b34c2fde41"
          },
          "dependencies": [
            "module.module-eks.aws_eip.nat",
            "module.module-eks.aws_internet_gateway.main-gw",
            "module.module-eks.aws_nat_gateway.nat-gw",
            "module.module-eks.aws_route_table.main-private",
            "module.module-eks.aws_subnet.main-private-3",
            "module.module-eks.aws_subnet.main-public-1",
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bf63a2544bf9423",
            "route_table_id": "rtb-0842dba0b875ad99c",
            "subnet_id": "subnet-052d8bb41df048810"
          },
          "dependencies": [
            "module.module-eks.aws_internet_gateway.main-gw",
            "module.module-eks.aws_route_table.main-public",
            "module.module-eks.aws_subnet.main-public-1",
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbadf20f10b699a3",
            "route_table_id": "rtb-0842dba0b875ad99c",
            "subnet_id": "subnet-021d5b31c8d651c20"
          },
          "dependencies": [
            "module.module-eks.aws_internet_gateway.main-gw",
            "module.module-eks.aws_route_table.main-public",
            "module.module-eks.aws_subnet.main-public-2",
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0196236a2ed633670",
            "route_table_id": "rtb-0842dba0b875ad99c",
            "subnet_id": "subnet-090cb349bab88d4ab"
          },
          "dependencies": [
            "module.module-eks.aws_internet_gateway.main-gw",
            "module.module-eks.aws_route_table.main-public",
            "module.module-eks.aws_subnet.main-public-3",
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:subnet/subnet-0593a304dc26fca7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0593a304dc26fca7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343568180534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-private-1",
              "kubernetes.io/cluster/tagal-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-private-1",
              "kubernetes.io/cluster/tagal-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03ca2eda2dea91572"
          },
          "dependencies": [
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:subnet/subnet-007e5128850201f95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007e5128850201f95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343568180534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-private-2",
              "kubernetes.io/cluster/tagal-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-private-2",
              "kubernetes.io/cluster/tagal-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03ca2eda2dea91572"
          },
          "dependencies": [
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:subnet/subnet-05291e2b34c2fde41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05291e2b34c2fde41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343568180534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-private-3",
              "kubernetes.io/cluster/tagal-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-private-3",
              "kubernetes.io/cluster/tagal-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03ca2eda2dea91572"
          },
          "dependencies": [
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:subnet/subnet-052d8bb41df048810",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052d8bb41df048810",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343568180534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-public-1",
              "kubernetes.io/cluster/tagal-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-public-1",
              "kubernetes.io/cluster/tagal-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03ca2eda2dea91572"
          },
          "dependencies": [
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:subnet/subnet-021d5b31c8d651c20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021d5b31c8d651c20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343568180534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-public-2",
              "kubernetes.io/cluster/tagal-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-public-2",
              "kubernetes.io/cluster/tagal-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03ca2eda2dea91572"
          },
          "dependencies": [
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:subnet/subnet-090cb349bab88d4ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090cb349bab88d4ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343568180534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-public-3",
              "kubernetes.io/cluster/tagal-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedWith": "terraform",
              "Name": "tagal-eks-public-3",
              "kubernetes.io/cluster/tagal-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03ca2eda2dea91572"
          },
          "dependencies": [
            "module.module-eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-eks",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:vpc/vpc-03ca2eda2dea91572",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad88838484d184b5",
            "default_route_table_id": "rtb-0a64ad83395ca6787",
            "default_security_group_id": "sg-0edf8e21560d3a887",
            "dhcp_options_id": "dopt-0118b12bcb0f5889b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ca2eda2dea91572",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a64ad83395ca6787",
            "owner_id": "343568180534",
            "tags": {
              "CreatedWith": "terraform",
              "Name": "main-tagal-eks-vpc"
            },
            "tags_all": {
              "CreatedWith": "terraform",
              "Name": "main-tagal-eks-vpc"
            }
          }
        }
      ]
    }
  ]
}